# e-commerce

./: README.md
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
backend/core/: asgi.py  urls.py
backend/core/settings/: base.py  dev.py  prod.py
backend/inventory/: admin.py  models.py  serializers.py
backend/inventory/migrations/: 0001_initial.py  0002_order_orderitem_shippingaddress.py  0003_orderitem_user.py  0004_remove_orderitem_image_orderitem_isactive.py
backend/inventory/urls/: order_urls.py  product_urls.py
backend/inventory/views/: order_views.py  product_views.py
backend/tenant/: admin.py  middleware.py  models.py  tests.py  utils.py
backend/tenant/migrations/: 0001_initial.py
backend/users/: managers.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: test_models.py  test_serializers.py
frontend/: .env.dev  .env.prod  Makefile  package.json  tsconfig.json
frontend/public/: index.html
frontend/public/css/: style.css  style2.css
frontend/src/: App.tsx  index.tsx  store.ts  types.ts
frontend/src/components/: Product.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/features/auth/: authActions.ts  authSlice.ts
frontend/src/features/order/: orderSlice.ts
frontend/src/features/product/: productsSlice.ts
frontend/src/pages/: Cart.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx  SingleProduct.tsx  Store.tsx
frontend/src/utils/: Api.ts  ApiService.ts  BaseQuery.ts  PrivateRoute.tsx
